...
    Column(
        modifier = Modifier.fillMaxWidth(),
        verticalArrangement = Arrangement.spacedBy(12.dp)
    ) {
        OutlinedCard(
            onClick = onNavigateToMidi,
            modifier = Modifier.fillMaxWidth().testTag("edit-audio-button")
        ) {
            Column(
                modifier = Modifier.padding(16.dp)
            ) {
                Text(
                    text = "Edit Audio",
...
                )
            }
        }

        OutlinedCard(
            onClick = onNavigateToPixel,
            modifier = Modifier.fillMaxWidth().testTag("edit-animation-button")
        ) {
            Column(
                modifier = Modifier.padding(16.dp)
            ) {
                Text(
                    text = "Edit Animation",
...
